--- a/bookclub_app/templates/about.html
+++ b/bookclub_app/templates/about.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BigBack BookClub</title>
-</head>
-<body>
-  <h1>About the BigBack BookClub</h1>
-</body>
-</html>
+{% extends 'base.html' %} 
+{% block content %}
+<h1>About the BigBack BookClub</h1>
+<hr />
+<p class="page-content">
+  We like long book series with lots of pages and chapters. Paper back, Hard back, As long as its a BIG Back!
+</p>
+{% endblock %}
