book list created

--- a/bookclub_app/templates/about.html
+++ b/bookclub_app/templates/about.html
@@ -2,7 +2,7 @@
 {% block content %}
 <h1>About the BigBack BookClub</h1>
 <hr />
-<p class="page-content">
+<p class='page-content'>
   We like long book series with lots of pages and chapters. Paper back, Hard back, As long as its a BIG Back!
 </p>
 {% endblock %}
