--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -1,28 +1,29 @@
 {% load static %}
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="" />
+    <meta charset='UTF-8' />
+    <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+    <meta name='viewport' content='width=device-width, initial-scale=1.0' />
+    <link rel='shortcut icon' type='image/png' href='' />
     <title>BigBack BookClub</title>
-    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel='stylesheet' href='{% static 'css/base.css' %}' />
 
     {% block head %} 
     {% endblock %}
   </head>
   <body>
     <header>
-      <div class="header-logo-container">
-        <a href="/">
-          <img src="" alt="The BigBack BookClub Logo" />
+      <div class='header-logo-container'>
+        <a href='/'>
+          <img src='' alt='The BigBack BookClub Logo' />
         </a>
       </div>
       <nav>
         <ul>
-          <li><a href="/about">About</a></li>
+          <li><a href='/books'>All Books</a></li>
+          <li><a href='/about'>About</a></li>
         </ul>
       </nav>
     </header>
