--- a/bookclub_app/templates/books/index.html
+++ b/bookclub_app/templates/books/index.html
@@ -4,7 +4,7 @@
 
 <section class='page-header'>
   <h1>Book List</h1>
-  <img src='' alt='Book Cover' />
+  <img src='' alt='BookClub Picture' />
 </section>
 
 <section class='card-container'>
