--- a/bookclub_app/static/css/base.css
+++ b/bookclub_app/static/css/base.css
@@ -36,7 +36,7 @@ body {
   --link-hover-color: blue;
   --button-bg: greenyellow;
   --button-bg-hover: blue;
-  --submit: rgb(26, 128, 0);
+  --submit: darkgreen;
   --warn: rgb(255, 102, 0);
   --danger: rgb(220, 20, 30);
   --secondary: rgb(57, 57, 57);
@@ -124,6 +124,7 @@ nav li {
 
 .btn:hover {
   background-color: var(--button-bg-hover);
+  color: white;
 }
 
 .submit {
