--- a/bookclub_app/templates/books/index.html
+++ b/bookclub_app/templates/books/index.html
@@ -16,8 +16,7 @@
           <img src='' alt='A Book Cover' />
         </div>
         <h2 class='card-title'>{{ book.title }}</h2>
-        <p>A {{ book.genre }} book by {{ book.author }}</p>
-        <p><small>{{ book.description }}</small></p>
+        <p>By {{ book.author }}</p>
       </div>
     </div>
     {% endfor %}
