--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -22,9 +22,20 @@
       </div>
       <nav>
         <ul>
-          <li><a href="{% url 'book-index' %}">All Books</a></li>
-          <li><a href="{% url 'book-create' %}">Add a Book</a></li>
-          <li><a href="{% url 'about' %}">About</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'book-index' %}">All Books</a></li>
+            <li><a href="{% url 'book-create' %}">Add a Book</a></li>
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li>
+              <form id="logout-form" method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit">Log Out</button>
+              </form>
+            </li>
+          {% else %}
+            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'home' %}">Login</a></li>
+          {% endif %}
         </ul>
       </nav>
     </header>
