--- a/bookclub_app/static/css/books/book-detail.css
+++ b/bookclub_app/static/css/books/book-detail.css
@@ -24,13 +24,6 @@
   margin-top: 20px;
 }
 
-.feedings-toy-container {
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 20px;
-  align-items: center;
-}
-
 .subsection-title {
   display: flex;
   align-items: center;
@@ -41,35 +34,11 @@
   margin: 0 8px;
 }
 
-.toy-container {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
 .color-block {
   opacity: 0.8;
   height: 25px;
   width: 25px;
   margin-right: 10px;
-}
-
-.unfed,
-.fed,
-.no-toys,
-.all-toys {
-  margin: 0;
-  font-weight: bold;
-}
-
-.unfed,
-.no-toys {
-  color: var(--danger);
-}
-
-.fed,
-.all-toys {
-  color: var(--submit);
 }
 
 .book-details h1 {
@@ -94,17 +63,61 @@
   margin: 5px 0;
 }
 
-.feedings-toy-container > section {
-  width: 80%;
-  min-width: 360px;
-  border: var(--borders);
-  border-radius: var(--card-border-radius);
+.comments,
+.suggestions {
+  width: 100%;
+  margin-top: 30px;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  background-color: #f9f9f9;
+}
+
+.comments h3,
+.suggestions h3 {
+  font-size: var(--font-l);
+  margin-bottom: 15px;
+}
+
+.comments-list,
+.suggestions-list {
+  list-style-type: none;
+  padding: 0;
+}
+
+.comments-list li,
+.suggestions-list li {
+  padding: 8px;
+  border-bottom: 1px solid #ccc;
+}
+
+.comments-list li:last-child,
+.suggestions-list li:last-child {
+  border-bottom: none;
+}
+
+textarea {
+  width: 100%;
+  height: 80px;
+  margin-top: 10px;
   padding: 10px;
-  box-shadow: var(--card-box-shadow);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: var(--font-reg);
+}
+
+textarea:focus {
+  border-color: #007bff;
+  outline: none;
+}
+
+.btn {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 4px;
+  border: none;
 }
 
 .subsection-title img {
@@ -114,18 +127,6 @@
 
 .subsection-title img:first-of-type {
   margin-left: 16px;
-}
-
-.feedings h2,
-.toys h2 {
-  font-size: 3.2rem;
-  margin: 0;
-}
-
-.feedings h3,
-.toys h3 {
-  font-size: var(--font-xl);
-  margin: 10px 0;
 }
 
 .subsection-content p,
@@ -138,42 +139,6 @@
 .subsection-content select {
   margin-left: 5px;
   padding: 3px;
-}
-
-.feedings table {
-  width: calc(100% - 16px);
-  text-align: left;
-  border-collapse: collapse;
-  margin: 0 8px;
-}
-
-.feedings td {
-  padding: 8px 5px;
-  font-size: var(--font-reg);
-}
-
-.feedings th {
-  font-size: var(--font-l);
-  padding: 5px 5px 0;
-  border-bottom: rgb(36, 116, 248) solid 2px;
-}
-
-.feedings tr:nth-child(even) {
-  background-color: #f3f3fd;
-}
-
-.toy-container p {
-  margin: 12px 0;
-}
-
-.toy-container a {
-  text-decoration: none;
-  color: #111;
-}
-
-.toy-container .btn {
-  padding: 3px 10px;
-  margin-left: 10px;
 }
 
 #file-input {
@@ -200,20 +165,7 @@
     max-width: 250px;
     margin-right: 25px;
   }
-
-  /* .feedings-toy-container {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: flex-start;
-  }
-
-  .feedings-toy-container > section {
-    width: 45%;
-  } */
 } 
 
 @media only screen and (min-width: 1024px) {
-  .feedings-toy-container {
-    padding: 0 40px;
   }
-}
