--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -25,6 +25,7 @@
           {% if user.is_authenticated %}
             <li><a href="{% url 'book-index' %}">All Books</a></li>
             <li><a href="{% url 'book-create' %}">Add a Book</a></li>
+            <li><a href="{% url 'community' %}">Community</a></li>
             <li><a href="{% url 'about' %}">About</a></li>
             <li>
               <form id="logout-form" method="post" action="{% url 'logout' %}">
