--- a/bookclub_app/templates/books/detail.html
+++ b/bookclub_app/templates/books/detail.html
@@ -13,6 +13,7 @@
     <h1>{{ book.title }}</h1>
     <h2>A {{ book.genre }} book series about '{{ book.description }}'.</h2>
     <p>Written by {{ book.author }}</p>
+    <p>{{ read_count }} users have read this book.</p>
 
     <div class="book-actions">
       <a href="{% url 'book-update' book.id %}" class="btn warn">Edit</a>
