--- a/bookclub_app/templates/home.html
+++ b/bookclub_app/templates/home.html
@@ -16,6 +16,23 @@
       <button type="submit" class="btn submit">Login</button>
     </form>
   </section>
+   {% else %}
+    <section class='book-list'>
+      <h1>Available Books</h1>
+      <ul>
+        {% for book in books %}
+          <li>
+            <h2><a href="{% url 'book-detail' book.id %}">{{ book.title }}</a></h2>
+            <p>Author: {{ book.author }}</p>
+            <p>Genre: {{ book.genre }}</p>
+            <p>Description: {{ book.description }}</p>
+          </li>
+        {% empty %}
+          <li>No books available at the moment.</li>
+        {% endfor %}
+      </ul>
+    </section>
+ 
 {% endif %}
 
 {% endblock %}
