--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -35,6 +35,7 @@
             </li>
           {% else %}
             <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href="{% url 'community' %}">Community</a></li>
             <li><a href="{% url 'home' %}">Login</a></li>
             <li><a href="{% url 'signup' %}">Sign Up</a></li>
           {% endif %}
