--- a/bookclub_app/templates/books/detail.html
+++ b/bookclub_app/templates/books/detail.html
@@ -16,8 +16,10 @@
     <p>{{ read_count }} users have read this book.</p>
 
     <div class="book-actions">
-      <a href="{% url 'book-update' book.id %}" class="btn warn">Edit</a>
-      <a href="{% url 'book-delete' book.id %}" class="btn danger">Delete</a>
+      {% if is_owner %}
+        <a href="{% url 'book-update' book.id %}" class="btn warn">Edit</a>
+        <a href="{% url 'book-delete' book.id %}" class="btn danger">Delete</a>
+      {% endif %}
     </div>
   </div>
 </section>
@@ -34,7 +36,9 @@
     {% for comment in comments %}
       <li>
         <strong>{{ comment.user.username }}:</strong> {{ comment.content }}
-        <a href="{% url 'delete_comment' comment.id %}" class="btn danger">Delete</a>
+        {% if comment.user == request.user %}
+          <a href="{% url 'delete_comment' comment.id %}" class="btn danger">Delete</a>
+        {% endif %}
       </li>
     {% empty %}
       <li>No comments yet. Be the first to comment!</li>
@@ -54,7 +58,9 @@
     {% for suggestion in suggestions %}
       <li>
         <strong>{{ suggestion.user.username }}</strong> suggested this book.
-        <a href="{% url 'undo_suggestion' suggestion.id %}" class="btn danger">Undo</a>
+        {% if suggestion.user == request.user %}
+          <a href="{% url 'undo_suggestion' suggestion.id %}" class="btn danger">Undo</a>
+        {% endif %}
       </li>
     {% empty %}
       <li>No suggestions yet. Suggest this book!</li>
