--- a/bookclub_app/static/css/form.css
+++ b/bookclub_app/static/css/form.css
@@ -2,12 +2,9 @@
   display: flex;
   flex-direction: column;
   width: 75%;
-  /* place-items: center; */
 }
 
 table {
-  /* align-items: center; */
-  /* justify-content: center; */
   padding: 0 40px;
   width: 100%;
   border-spacing: 0 20px;
@@ -15,10 +12,10 @@ table {
 
 th {
   text-align: right;
-  padding: 6px 20px 0 0;
-  font-weight: normal;
+  padding: 6px 10px 0 0;
+  font-weight: bold;
   vertical-align: top;
-  font-size: var(--font-reg);
+  font-size: var(--font-l);
 }
 
 td {
@@ -28,7 +25,7 @@ td {
 td > * {
   width: 100%;
   padding: 2px 4px;
-  font-size: var(--font-l);
+  font-size: var(--font-reg);
 }
 
 td > textarea {
