--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='shortcut icon' type='image/png' href='' />
+    <link rel='shortcut icon' type='image/png' href='{% static 'book-icon.png' %}' />
     <title>BigBack BookClub</title>
     <link rel='stylesheet' href='{% static 'css/base.css' %}' />
 
@@ -17,27 +17,27 @@
     <header>
       <div class='header-logo-container'>
         <a href='/'>
-          <img src='' alt='The BigBack BookClub Logo' />
+          <img src='{% static 'images/logo.png' %}' alt='The BigBack BookClub Logo' />
         </a>
       </div>
       <nav>
         <ul>
           {% if user.is_authenticated %}
-            <li><a href="{% url 'book-index' %}">All Books</a></li>
-            <li><a href="{% url 'book-create' %}">Add a Book</a></li>
-            <li><a href="{% url 'community' %}">Community</a></li>
-            <li><a href="{% url 'about' %}">About</a></li>
+            <li><a href='{% url 'book-index' %}'>All Books</a></li>
+            <li><a href='{% url 'book-create' %}'>Add a Book</a></li>
+            <li><a href='{% url 'community' %}'>Community</a></li>
+            <li><a href='{% url 'about' %}'>About</a></li>
             <li>
-              <form id="logout-form" method="post" action="{% url 'logout' %}">
+              <form id='logout-form' method='post' action='{% url 'logout' %}'>
                 {% csrf_token %}
-                <button type="submit">Log Out</button>
+                <button type='submit'>Log Out</button>
               </form>
             </li>
           {% else %}
-            <li><a href="{% url 'about' %}">About</a></li>
-            <li><a href="{% url 'community' %}">Community</a></li>
-            <li><a href="{% url 'home' %}">Login</a></li>
-            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href='{% url 'about' %}'>About</a></li>
+            <li><a href='{% url 'community' %}'>Community</a></li>
+            <li><a href='{% url 'home' %}'>Login</a></li>
+            <li><a href='{% url 'signup' %}'>Sign Up</a></li>
           {% endif %}
         </ul>
       </nav>
