--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset='UTF-8' />
     <meta http-equiv='X-UA-Compatible' content='IE=edge' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <link rel='shortcut icon' type='image/png' href='{% static 'book-icon.png' %}' />
+    <link rel='shortcut icon' type='image/png' href='{% static 'css/images/book-icon.png' %}' />
     <title>BigBack BookClub</title>
     <link rel='stylesheet' href='{% static 'css/base.css' %}' />
 
@@ -17,7 +17,7 @@
     <header>
       <div class='header-logo-container'>
         <a href='/'>
-          <img src='{% static 'images/logo.png' %}' alt='The BigBack BookClub Logo' />
+          <img class="logo-img" src='{% static 'css/images/logo.png' %}' alt='The BigBack BookClub Logo' />
         </a>
       </div>
       <nav>
