--- a/bookclub_app/templates/base.html
+++ b/bookclub_app/templates/base.html
@@ -17,7 +17,7 @@
     <header>
       <div class='header-logo-container'>
         <a href='/'>
-          <img class="logo-img" src='{% static 'css/images/logo.png' %}' alt='The BigBack BookClub Logo' />
+          <img class="logo-img" src='{% static 'css/images/logo.png' %}' alt='The BigBack BookClub Logo' /> BigBackBookClub
         </a>
       </div>
       <nav>
