--- a/bookclub_app/templates/home.html
+++ b/bookclub_app/templates/home.html
@@ -9,7 +9,7 @@
 
 <section class='logo-container'>
   <div class='book-container'></div>
-  <img src='' alt='Text reads: BigBack BookClub' />
+  <img class="home-page-img" src='{% static 'css/images/books.png' %}' alt='Text reads: BigBack BookClub' />
 </section>
 
 {% if not user.is_authenticated %}
