--- a/bookclub_app/static/css/community.css
+++ b/bookclub_app/static/css/community.css
@@ -11,6 +11,7 @@ main {
     padding: 20px;
     box-shadow: var(--card-box-shadow);
     margin-bottom: 20px;
+    justify-items: center;
 }
 
 .current-book h1 {
@@ -23,8 +24,9 @@ main {
 }
 
 .current-book img {
-    max-width: 100%;
-    height: auto;
+    max-width: 25%;
+    height: 25%;
+    margin-left: 40%;
 }
 
 .comments,
