--- a/bookclub_app/static/css/home.css
+++ b/bookclub_app/static/css/home.css
@@ -63,6 +63,13 @@ main > section {
   margin-top: 16px;
 }
 
+.home-page-img {
+  align-self: flex-end;
+  max-width: 100%;
+  max-height: 100%;
+
+}
+
 @media only screen and (min-width: 768px) {
   main {
     justify-content: space-around;
