--- a/bookclub_app/templates/books/index.html
+++ b/bookclub_app/templates/books/index.html
@@ -4,7 +4,7 @@
 
 <section class='page-header'>
   <h1>Book List</h1>
-  <img src='' alt='BookClub Picture' />
+  <img src='{% static 'css/images/books.png' %}' alt='BookClub Picture' />
 </section>
 
 <section class='card-container'>
@@ -13,7 +13,7 @@
     <a href='{% url 'book-detail' book.id %}'>
       <div class='card-content'>
         <div class='card-img-container'>
-          <img src='' alt='A Book Cover' />
+          <img class='list-img' src='{% static 'css/images/logo.png' %}' alt='A Book Cover' />
         </div>
         <h2 class='card-title'>{{ book.title }}</h2>
         <p>By {{ book.author }}</p>
