--- a/bookclub_app/templates/signup.html
+++ b/bookclub_app/templates/signup.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class='page-header'>
   <h1>Sign Up</h1>
-  <img src='' alt='A signup img' />
+  <img src='{% static 'css/images/books.png' %}' alt='A signup img' />
 </div>
 {% if error_message %}
   <p class='red-text'>{{ error_message }}</p>
